--- a/CarDealership/appsettings.json
+++ b/CarDealership/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CarDealership-b160f66b-5dc0-47eb-b6e3-30f653dad1a5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=CarDealership;User Id = sa; Password=Todor@@@"
   },
   "Logging": {
     "LogLevel": {
