--- a/CarDealership.Infrastructure/CarDealership.Infrastructure.csproj
+++ b/CarDealership.Infrastructure/CarDealership.Infrastructure.csproj
@@ -18,6 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Configuration\" />
+    <Folder Include="Data\Constants\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
