--- a/CarDealership.Infrastructure/CarDealership.Infrastructure.csproj
+++ b/CarDealership.Infrastructure/CarDealership.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,7 +19,6 @@
 
   <ItemGroup>
     <Folder Include="Data\Configuration\" />
-    <Folder Include="Data\Constants\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
