--- a/CarDealership.Core/CarDealership.Core.csproj
+++ b/CarDealership.Core/CarDealership.Core.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\CarDealership.Infrastructure\CarDealership.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Motor\" />
+    <Folder Include="Models\Truck\" />
+  </ItemGroup>
+
 </Project>
