adding more tests

--- a/CarDealership.UnitTests/CarDealership.UnitTests.csproj
+++ b/CarDealership.UnitTests/CarDealership.UnitTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarDealership\CarDealership.csproj" />
+    <ProjectReference Include="..\CarDealership.Core\CarDealership.Core.csproj" />
   </ItemGroup>
 
 </Project>
